--- a/proj.android/AndroidManifest.xml
+++ b/proj.android/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.weizoo.game.go.HappyGo"
-      android:versionCode="3"
-      android:versionName="1.0">
+      package="com.weizoo.go"
+      android:versionCode="6"
+      android:versionName="1.1">
 	<supports-screens android:largeScreens="true"
                    android:smallScreens="true"
                    android:anyDensity="true"
@@ -13,26 +13,45 @@
     
     <uses-feature android:glEsVersion="0x00020000" />
 	
-	<uses-permission android:name="android.permission.INTERNET"/>
-  	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-  	<uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     
     <application android:label="@string/app_name"
         android:allowBackup="true"
-        android:icon="@drawable/icon">
-        <activity android:name="com.weizoo.game.go.HappyGo.HappyGo"
+        android:icon="@drawable/icon"
+        android:name=".CmgameApplication">
+        
+		<activity android:name="cn.cmgame.billing.ui.GameOpenActivity"
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+			android:screenOrientation="portrait">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+			<intent-filter>
+				<action android:name="android.intent.action.CHINAMOBILE_OMS_GAME" />
+				<category android:name="android.intent.category.CHINAMOBILE_GAMES" />
+			</intent-filter>
+		</activity>
+		
+        <activity android:name="com.weizoo.go.HappyGo"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
                   android:configChanges="orientation">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-        <activity android:name="com.google.ads.AdActivity"
-                  android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
-		<meta-data android:value="52c6c37b56240ba5fc123069" android:name="UMENG_APPKEY"></meta-data>
-		<meta-data android:value="GooglePlay" android:name="UMENG_CHANNEL"/>    
+        
+        <activity
+            android:name="com.weizoo.utils.CocosWebActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        
+		<meta-data android:value="53b7c6c656240b1d3400fe6b" android:name="UMENG_APPKEY"></meta-data>
+		<meta-data android:value="china_mobile" android:name="UMENG_CHANNEL"/>    
 	</application>
 </manifest> 
